# .emacs.d

./: .gitignore  .gitmodules  Makefile  README.org  custom-template.el  early-init.el  emacs2ram  gnus.el  i3wm.el  init-i3wm.el  init.el  init.el.example  org-project.el  packages.el  profile.el
doc/: README.org  artist.org  auctex.org  calc.org  commonkey.org  haskell.org  lispy.org  paredit.org
etc/: .eslintrc  custom-template-2.el  custom-template-terminal.el  custom-template.el  dump.el  env-defs.el  env-vars.el  exwm-setup.el  features-template.el  gnus.desktop  gnus.el  has-module.py  i3wm.el  org-async-init.el  org-common.css  org-macros  org-manual.css  org-mathjax-template  perli  setup.el  setup.sh
etc/project-templates/cpp-cmake/: CMakeLists.txt  __DOT__clang-format  __DOT__dir-locals.el  __DOT__gitignore
etc/project-templates/cpp-cmake/src/: main.cpp
lisp/: after-init.el  cdb-json-projects  core-company.el  core-custom.el  core-defaults.el  core-env-vars.el  core-features.el  core-hideshow.el  core-hydra.el  core-ivy.el  core-lib.el  core-misc.el  core-mode-line.el  core-modeline.el  core-packages-lib.el  core-packages.el  core-popups.el  core-semantic.el  core-term.el  core-theme.el  core-ui.el  core-vars.el  init-auto-mode.el  init-bbdb.el  init-cc-mode.el  init-clipboard.el  init-cmake.el  init-color-theme.el  init-company.el  init-cpp-ccls.el  init-cpp-clangd.el  init-cpp-cmake-ui.el  init-cpp-cmake.el  init-cpp-cquery.el  init-cpp.el  init-cquery.el  init-css.el  init-defaults.el  init-dired.el  init-doctor.el  (+72 more)
org-template/: beamer  common
(+574 files in other folders)
